Fixes #3 (image alignment floating)

--- a/assets/sass/custom.scss
+++ b/assets/sass/custom.scss
@@ -8,18 +8,21 @@ You can add your own styles in your site’s assets/sass/custom.scss, which is i
 
 .right {
     float: right;
-    max-width: 40%;
-    margin-left: 5px
+    max-width: 45%;
+    padding-top: 5px;
+    padding-left: 10px;
 }
 
 .left {
     float: left;
-    max-width: 40%;
-    margin-right: 20px
+    max-width: 45%;
+    padding-top: 5px;
+    padding-right: 10px;
 }
 
 .center {
     display: block;
+    max-width: 100%;
     margin: auto;
     text-align: center;
 }
